Modernize JWT security to Spring Boot 4.1 with tests and Postman.
Upgrade to Java 21, records, RFC 7807 errors, and stored access/refresh
tokens with revocation. Add H2-backed unit/integration tests and a
Postman collection for the local API.