@@ -1,7 +1,5 @@
 package com.alibou.security.user;
 
-import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collections;
@@ -18,42 +16,41 @@ import static com.alibou.security.user.Permission.MANAGER_DELETE;
 import static com.alibou.security.user.Permission.MANAGER_READ;
 import static com.alibou.security.user.Permission.MANAGER_UPDATE;
 
-@RequiredArgsConstructor
 public enum Role {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  ),
-  MANAGER(
-          Set.of(
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  )
+    USER(Collections.emptySet()),
+    ADMIN(Set.of(
+            ADMIN_READ,
+            ADMIN_UPDATE,
+            ADMIN_DELETE,
+            ADMIN_CREATE,
+            MANAGER_READ,
+            MANAGER_UPDATE,
+            MANAGER_DELETE,
+            MANAGER_CREATE
+    )),
+    MANAGER(Set.of(
+            MANAGER_READ,
+            MANAGER_UPDATE,
+            MANAGER_DELETE,
+            MANAGER_CREATE
+    ));
 
-  ;
+    private final Set<Permission> permissions;
 
-  @Getter
-  private final Set<Permission> permissions;
+    Role(Set<Permission> permissions) {
+        this.permissions = permissions;
+    }
 
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    var authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+    public Set<Permission> getPermissions() {
+        return permissions;
+    }
+
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = getPermissions().stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + name()));
+        return authorities;
+    }
 }
